# atomictest

./: configure.ac
src/: Makefile.am  main.c
